@@ -7,27 +7,21 @@ Otogiri - A lightweight medicine for using database
     use Otogiri;
     my $db = Otogiri->new(connect_info => ['dbi:SQLite:...', '', '']);
     
-
     my $row = $db->insert(book => {title => 'mybook1', author => 'me', ...});
     print 'Title: '. $row->{title}. "\n";
     
-
     my @rows = $db->select(book => {price => {'>=' => 500}});
     for my $r (@rows) {
         printf "Title: %s \nPrice: %s yen\n", $r->{title}, $r->{price};
     }
     
-
     $db->update(book => [author => 'oreore'], {author => 'me'});
     
-
     $db->delete(book => {author => 'me'});
     
-
     ### insert without row-data in response
     $db->fast_insert(book => {title => 'someone', ...});
     
-
     ### using transaction
     do {
         my $txn = $db->txn_scope;
@@ -52,7 +46,7 @@ You have to specify `dsn`, `dbuser`, and `dbpass`, to connect to database.
 
     use JSON;
     inflate => sub {
-        my ($data, $tablename) = @_;
+        my ($data, $tablename, $db) = @_;
         if (defined $data->{json}) {
             $data->{json} = decode_json($data->{json});
         }
@@ -64,11 +58,13 @@ You may specify column inflation logic.
 
 Specified code is called internally when called select(), search\_by\_sql(), and single().
 
+`$db` is Otogiri instance, you can use Otogiri's method in inflate logic.
+
 ## deflate (optional)
 
     use JSON;
     deflate => sub {
-        my ($data, $tablename) = @_;
+        my ($data, $tablename, $db) = @_;
         if (defined $data->{json}) {
             $data->{json} = encode_json($data->{json});
         }
@@ -80,13 +76,15 @@ You may specify column deflation logic.
 
 Specified code is called internally when called insert(), update(), and delete().
 
+`$db` is Otogiri instance, you can use Otogiri's method in deflate logic.
+
 # METHODS
 
 ## new
 
     my $db = Otogiri->new( connect_info => [$dsn, $dbuser, $dbpass] );
 
-Instantiate and connect to db. Then, it returns [DBIx::Otogiri](http://search.cpan.org/perldoc?DBIx::Otogiri) object.
+Instantiate and connect to db. Then, it returns [DBIx::Otogiri](https://metacpan.org/pod/DBIx::Otogiri) object.
 
 Please see ATTRIBUTE section.
 
@@ -103,8 +101,8 @@ ytnobody <ytnobody@gmail.com>
 
 # SEE ALSO
 
-[DBIx::Otogiri](http://search.cpan.org/perldoc?DBIx::Otogiri)
+[DBIx::Otogiri](https://metacpan.org/pod/DBIx::Otogiri)
 
-[DBIx::Sunny](http://search.cpan.org/perldoc?DBIx::Sunny)
+[DBIx::Sunny](https://metacpan.org/pod/DBIx::Sunny)
 
-[SQL::Maker](http://search.cpan.org/perldoc?SQL::Maker)
+[SQL::Maker](https://metacpan.org/pod/SQL::Maker)
